# cloxx

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md
.github/workflows/: cmake.yml
scripts/: apply-format-all.sh  apply-format.sh  build.sh  configure-debug.sh  configure.sh  gen-ast.sh  reconfigure.sh
src/: Assert.hpp  Callable.hpp  Environment.cpp  Environment.hpp  ErrorReporter.hpp  FileReader.cpp  FileReader.hpp  GC.cpp  GC.hpp  Interpreter.cpp  Interpreter.hpp  Lox.cpp  Lox.hpp  LoxBool.cpp  LoxBool.hpp  LoxBoolean.cpp  LoxBoolean.hpp  LoxCallable.hpp  LoxClass.cpp  LoxClass.hpp  LoxFunction.cpp  LoxFunction.hpp  LoxInstance.cpp  LoxInstance.hpp  LoxList.cpp  LoxList.hpp  LoxModule.cpp  LoxModule.hpp  LoxNativeFunction.cpp  LoxNativeFunction.hpp  LoxNil.cpp  LoxNil.hpp  LoxNumber.cpp  LoxNumber.hpp  LoxObject.cpp  LoxObject.hpp  LoxString.cpp  LoxString.hpp  LoxUserFunction.cpp  LoxUserFunction.hpp  (+17 more)
test/: README.md
test/benchmark/: binary_trees.lox  equality.lox  fib.lox  instantiation.lox  method_call.lox  string_equality.lox  trees.lox  zoo.lox  zoo_batch.lox
test/break/: at_top_level.lox  in_for_loop.lox  in_func_in_loop.lox  in_while_loop.lox
test/class/: inherited_method.lox
test/closure/: unused_later_closure.lox
test/constructor/: arguments.lox  call_init_explicitly.lox
test/continue/: at_top_level.lox  in_for_loop.lox  in_func_in_loop.lox  in_while_loop.lox
test/field/: call_function_field.lox  call_nonfunction_field.lox  get_and_set_method.lox  inherit.lox  many.lox  (+3 more)
tool/: gen-ast.py  run-test.py
(+27 files in other folders)
